--- a/examples/webgpu_lights_custom.html
+++ b/examples/webgpu_lights_custom.html
@@ -99,9 +99,9 @@
 
 				} );
 
-				const lightingModelContext = new Nodes.LightContextNode( allLightsNode, customLightingModel );
+				const lightingModelContext = new Nodes.ContextNode( allLightsNode, { lightingModelNode: { direct : customLightingModel } } );
 
-				materialPoints.lightNode = lightingModelContext;
+				materialPoints.lightsNode = lightingModelContext;
 
 				//
 
@@ -113,6 +113,8 @@
 				renderer = new WebGPURenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
+				renderer.toneMappingNode = new Nodes.ToneMappingNode( THREE.LinearToneMapping, 1 );
+				renderer.outputEncoding = THREE.sRGBEncoding;
 				document.body.appendChild( renderer.domElement );
 
 				// controls
