--- a/examples/webgpu_lights_selective.html
+++ b/examples/webgpu_lights_selective.html
@@ -99,15 +99,15 @@
 
 				//light nodes ( selective lights )
 
-				const redLightNode = new Nodes.LightsNode().fromLights( [ light1 ] );
-				const blueLightNode = new Nodes.LightsNode().fromLights( [ light2 ] );
+				const redLightsNode = new Nodes.LightsNode().fromLights( [ light1 ] );
+				const blueLightsNode = new Nodes.LightsNode().fromLights( [ light2 ] );
 
 				//models
 
 				const geometryTeapot = new TeapotGeometry( 8, 18 );
 
 				const leftObject = new THREE.Mesh( geometryTeapot, new Nodes.MeshStandardNodeMaterial( { color: 0x555555 } ) );
-				leftObject.material.lightNode = redLightNode;
+				leftObject.material.lightsNode = redLightsNode;
 				leftObject.material.roughnessNode = new Nodes.TextureNode( alphaTexture );
 				leftObject.material.metalness = 0;
 				leftObject.position.x = - 30;
@@ -120,7 +120,7 @@
 				scene.add( centerObject );
 
 				const rightObject = new THREE.Mesh( geometryTeapot, new Nodes.MeshStandardNodeMaterial( { color: 0x555555 } ) );
-				rightObject.material.lightNode = blueLightNode;
+				rightObject.material.lightsNode = blueLightsNode;
 				rightObject.material.metalnessNode = new Nodes.TextureNode( alphaTexture );
 				rightObject.position.x = 30;
 				scene.add( rightObject );
