WebGPU: Supports to IBL + PBR (#24038)
* add Node.getReference() used to for share a similar node

* Remove SPECULAR for now and add EMISSIVE

* improve Object3DNode.update() implementation

* Nodes: move ./light/ to ./lighting/

* Move to LightingContextNode

* fix viewMatrix and update names

* update names

* Support to RGBMLoader

* Rename TextureBias to TextureLevel

* NodeMaterial: Improve support to IBL + PBR

* add webgpu_loader_gltf example

* update examples

* cleanup

* Delete webgpu_lights_hemisphere.html

* cleanup

* cleanup imports

--- a/examples/webgpu_compute.html
+++ b/examples/webgpu_compute.html
@@ -29,7 +29,7 @@
 			import * as Nodes from 'three-nodes/Nodes.js';
 
 			import {
-				ShaderNode, compute, context,
+				ShaderNode, compute,
 				uniform, element, storage, attribute,
 				temp, assign, add, sub, cond, abs, negate, max, min, length, vec3, color,
 				greaterThanEqual, lessThanEqual, instanceIndex
@@ -99,7 +99,7 @@
 					const pointer = uniform( pointerVector );
 					const limit = uniform( scaleVector );
 
-					const position = temp( context( add( particle, velocity ), { temp: false } ) );
+					const position = temp( add( particle, velocity ), 'tempPos' ); // @TODO: this should work without 'tempPos' property name
 					position.build( builder );
 
 					assign( velocity.x, cond( greaterThanEqual( abs( position.x ), limit.x ), negate( velocity.x ), velocity.x ) ).build( builder );
