--- a/examples/webgpu_sandbox.html
+++ b/examples/webgpu_sandbox.html
@@ -168,7 +168,7 @@
 				geometryLine.setAttribute( 'color', geometryLine.getAttribute( 'position' ) );
 
 				const materialLine = new Nodes.LineBasicNodeMaterial();
-				materialLine.colorNode = new Nodes.AttributeNode( 'color', 'vec3' );
+				materialLine.colorNode = new Nodes.AttributeNode( 'color' );
 
 				const line = new THREE.Line( geometryLine, materialLine );
 				line.position.set( 2, 1, 0 );
