--- a/examples/webgpu_sprites.html
+++ b/examples/webgpu_sprites.html
@@ -90,6 +90,7 @@
 					sprite.position.normalize();
 					sprite.position.multiplyScalar( radius );
 
+					// individual rotation per sprite
 					sprite.userData.rotation = 0;
 
 					group.add( sprite );
