--- a/examples/webgl_loader_imagebitmap.html
+++ b/examples/webgl_loader_imagebitmap.html
@@ -120,12 +120,12 @@
 
 				// TESTS
 
-				setTimeout( addImage, 400 );
-				setTimeout( addImage, 400 );
-				setTimeout( addImage, 400 );
-				setTimeout( addImageBitmap, 800 );
-				setTimeout( addImageBitmap, 800 );
-				setTimeout( addImageBitmap, 800 );
+				addImage();
+				addImage();
+				addImage();
+				addImageBitmap();
+				addImageBitmap();
+				addImageBitmap();
 
 				// EVENTS
 
