Use page.waitForNetworkIdle and partially restore pageSize code

--- a/examples/webgl_loader_imagebitmap.html
+++ b/examples/webgl_loader_imagebitmap.html
@@ -120,12 +120,12 @@
 
 				// TESTS
 
-				addImage();
-				addImage();
-				addImage();
-				addImageBitmap();
-				addImageBitmap();
-				addImageBitmap();
+				setTimeout( addImage, 400 );
+				setTimeout( addImage, 400 );
+				setTimeout( addImage, 400 );
+				setTimeout( addImageBitmap, 800 );
+				setTimeout( addImageBitmap, 800 );
+				setTimeout( addImageBitmap, 800 );
 
 				// EVENTS
 
