--- a/examples/webgpu_materials.html
+++ b/examples/webgpu_materials.html
@@ -33,7 +33,7 @@
 
 			import { TeapotGeometry } from './jsm/geometries/TeapotGeometry.js';
 
-			import { ShaderNode, vec3, dot, sampler } from 'three-nodes/Nodes.js';
+			import { ShaderNode, vec3, dot } from 'three-nodes/Nodes.js';
 
 			import Stats from './jsm/libs/stats.module.js';
 
