--- a/examples/webgpu_cubemap_adjusts.html
+++ b/examples/webgpu_cubemap_adjusts.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - Adjusts CubeMaps<br />
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - Env. Adjusts<br />
 			Battle Damaged Sci-fi Helmet by
 			<a href="https://sketchfab.com/theblueturtle_" target="_blank" rel="noopener">theblueturtle_</a><br />
 		</div>
