--- a/examples/webgl2_buffergeometry_attributes_none.html
+++ b/examples/webgl2_buffergeometry_attributes_none.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js WebGL 2 - buffergeometry - no attributes</title>
+		<title>three.js WebGL 2 - buffergeometry - attributes - none</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -9,7 +9,7 @@
 	<body>
 
 		<div id="container"></div>
-		<div id="info"><a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGL 2 - buffergeometry - no attributes</div>
+		<div id="info"><a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> WebGL 2 - buffergeometry - attributes - none</div>
 
 		<script id="vertexShader" type="x-shader/x-vertex">			
 			
