--- a/examples/webgpu_cubemap_adjustments.html
+++ b/examples/webgpu_cubemap_adjustments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgpu - cubemap adjusts</title>
+		<title>three.js webgpu - cubemap adjustments</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
@@ -9,7 +9,7 @@
 	<body>
 
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - Env. Adjusts<br />
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - Env. Adjustments<br />
 			Battle Damaged Sci-fi Helmet by
 			<a href="https://sketchfab.com/theblueturtle_" target="_blank" rel="noopener">theblueturtle_</a><br />
 		</div>
@@ -32,7 +32,7 @@
 			import * as THREE from 'three';
 			import * as Nodes from 'three-nodes/Nodes.js';
 
-			import { mix, cubeTexture, mul, reference, add, positionWorld, normalWorld, saturate } from 'three-nodes/Nodes.js';
+			import { uniform, mix, cubeTexture, mul, reference, add, positionWorld, normalWorld, saturate, saturation, vibrance, hue, reflectCube } from 'three-nodes/Nodes.js';
 
 			import WebGPU from './jsm/capabilities/WebGPU.js';
 			import WebGPURenderer from './jsm/renderers/webgpu/WebGPURenderer.js';
@@ -42,7 +42,7 @@
 			import { OrbitControls } from './jsm/controls/OrbitControls.js';
 			import { GLTFLoader } from './jsm/loaders/GLTFLoader.js';
 
-            import { GUI } from './jsm/libs/lil-gui.module.min.js';
+			import { GUI } from './jsm/libs/lil-gui.module.min.js';
 
 			let camera, scene, renderer;
 
@@ -61,10 +61,14 @@
 				const container = document.createElement( 'div' );
 				document.body.appendChild( container );
 
+				const initialDistance = 2;
+
 				camera = new THREE.PerspectiveCamera( 45, window.innerWidth / window.innerHeight, 0.25, 20 );
-				camera.position.set( - 1.8, 0.6, 2.7 );
+				camera.position.set( - 1.8 * initialDistance, 0.6 * initialDistance, 2.7 * initialDistance );
 
 				scene = new THREE.Scene();
+
+				// cube textures
 
 				const rgbmUrls = [ 'px.png', 'nx.png', 'py.png', 'ny.png', 'pz.png', 'nz.png' ];
 				const cube1Texture = new RGBMLoader()
@@ -83,19 +87,40 @@
 				cube2Texture.generateMipmaps = true;
 				cube2Texture.minFilter = THREE.LinearMipmapLinearFilter;
 
-				const adjusts = {
-                    mix : -1,
-					procedural : 0,
-                    monoBlue : 1,
-                    contrast : 1,
-                };
+				// nodes and environment
 
-				const mixCubeMaps = mix( cubeTexture( cube1Texture ), cubeTexture( cube2Texture ), saturate( add( positionWorld.y, reference( 'mix', 'float', adjusts ) ) ) );
-				const proceduralEnv = mix( mixCubeMaps, normalWorld, reference( 'procedural', 'float', adjusts ) );
-				const contrastFilter = mul( proceduralEnv, reference( 'contrast', 'float', adjusts ) );
-				const monoBlue = mix( contrastFilter.bbb, contrastFilter, reference( 'monoBlue', 'float', adjusts ) );
+				const adjustments = {
+					mix: 0,
+					procedural: 0,
+					brightness: 0,
+					contrast: 1,
+					hue: 0,
+					saturation: 1
+				};
 
-				scene.environmentNode = monoBlue;
+				const mixNode = reference( 'mix', 'float', adjustments );
+				const proceduralNode = reference( 'procedural', 'float', adjustments );
+				const brightnessNode = reference( 'brightness', 'float', adjustments );
+				const contrastNode = reference( 'contrast', 'float', adjustments );
+				const hueNode = reference( 'hue', 'float', adjustments );
+				const saturationNode = reference( 'saturation', 'float', adjustments );
+
+				const rotateY1Matrix = new THREE.Matrix4();
+				const rotateY2Matrix = new THREE.Matrix4();
+
+				const custom1UV = mul( reflectCube, uniform( rotateY1Matrix ) );
+				const custom2UV = mul( reflectCube, uniform( rotateY2Matrix ) );
+
+				const mixCubeMaps = mix( cubeTexture( cube1Texture, custom1UV ), cubeTexture( cube2Texture, custom2UV ), saturate( add( positionWorld.y, mixNode ) ) );
+				const proceduralEnv = mix( mixCubeMaps, normalWorld, proceduralNode );
+				const brightnessFilter = add( proceduralEnv, brightnessNode );
+				const contrastFilter = mul( brightnessFilter, contrastNode );
+				const hueFilter = hue( contrastFilter, hueNode );
+				const saturationFilter = saturation( hueFilter, saturationNode );
+
+				scene.environmentNode = saturationFilter;
+
+				// scene objects
 
 				const loader = new GLTFLoader().setPath( 'models/gltf/DamagedHelmet/glTF/' );
 				loader.load( 'DamagedHelmet.gltf', function ( gltf ) {
@@ -106,8 +131,20 @@
 
 				} );
 
-				renderer = new WebGPURenderer();
+				const sphereGeometry = new THREE.SphereGeometry( .5, 64, 32 );
 
+				const sphereRightView = new THREE.Mesh( sphereGeometry, new THREE.MeshStandardMaterial( { roughness: 0, metalness: 1 } ) );
+				sphereRightView.position.x += 2;
+
+				const sphereLeftView = new THREE.Mesh( sphereGeometry, new THREE.MeshStandardMaterial( { roughness: 1, metalness: 1 } ) );
+				sphereLeftView.position.x -= 2;
+
+				scene.add( sphereLeftView );
+				scene.add( sphereRightView );
+
+				// renderer and controls
+
+				renderer = new WebGPURenderer();
 				renderer.setPixelRatio( window.devicePixelRatio );
 				renderer.setSize( window.innerWidth, window.innerHeight );
 				renderer.toneMappingNode = new Nodes.ToneMappingNode( THREE.LinearToneMapping, 1 );
@@ -120,16 +157,28 @@
 
 				window.addEventListener( 'resize', onWindowResize );
 
-                //gui
+				// gui
 
-                const gui = new GUI();
+				const gui = new GUI();
 
-                gui.add( adjusts, 'mix', -1, 2, 0.01 );
-				gui.add( adjusts, 'procedural', 0, 1, 0.01 );
-                gui.add( adjusts, 'contrast', 0, 3, 0.01 );
-				gui.add( adjusts, 'monoBlue', 0, 2, 0.01 );
+				gui.add( { offsetCube1: 0 }, 'offsetCube1', 0, Math.PI * 2, 0.01 ).onChange( value => {
 
-				if ( renderer.init ) return renderer.init();
+					rotateY1Matrix.makeRotationY( value );
+
+				} );
+				gui.add( { offsetCube2: 0 }, 'offsetCube2', 0, Math.PI * 2, 0.01 ).onChange( value => {
+
+					rotateY2Matrix.makeRotationY( value );
+
+				} );
+				gui.add( adjustments, 'mix', - 1, 2, 0.01 );
+				gui.add( adjustments, 'procedural', 0, 1, 0.01 );
+				gui.add( adjustments, 'brightness', 0, 1, 0.01 );
+				gui.add( adjustments, 'contrast', 0, 3, 0.01 );
+				gui.add( adjustments, 'hue', 0, Math.PI * 2, 0.01 );
+				gui.add( adjustments, 'saturation', 0, 2, 0.01 );
+
+				return renderer.init();
 
 			}
 
