--- a/examples/webgpu_cubemap_mix.html
+++ b/examples/webgpu_cubemap_mix.html
@@ -32,7 +32,7 @@
 			import * as THREE from 'three';
 			import * as Nodes from 'three-nodes/Nodes.js';
 
-			import { mix, oscSine, timerLocal } from 'three-nodes/Nodes.js';
+			import { mix, oscSine, timerLocal, cubeTexture, context, float, vec3, negate, dot, temp } from 'three-nodes/Nodes.js';
 
 			import WebGPU from './jsm/capabilities/WebGPU.js';
 			import WebGPURenderer from './jsm/renderers/webgpu/WebGPURenderer.js';
@@ -65,13 +65,13 @@
 				scene = new THREE.Scene();
 
 				const rgbmUrls = [ 'px.png', 'nx.png', 'py.png', 'ny.png', 'pz.png', 'nz.png' ];
-				const cubeTexture = new RGBMLoader()
+				const cube1Texture = new RGBMLoader()
 					.setMaxRange( 16 )
 					.setPath( './textures/cube/pisaRGBM16/' )
 					.loadCubemap( rgbmUrls );
 
-				cubeTexture.generateMipmaps = true;
-				cubeTexture.minFilter = THREE.LinearMipmapLinearFilter;
+				cube1Texture.generateMipmaps = true;
+				cube1Texture.minFilter = THREE.LinearMipmapLinearFilter;
 
 				const cube2Urls = [ 'dark-s_px.jpg', 'dark-s_nx.jpg', 'dark-s_py.jpg', 'dark-s_ny.jpg', 'dark-s_pz.jpg', 'dark-s_nz.jpg' ];
 				const cube2Texture = new THREE.CubeTextureLoader()
@@ -81,7 +81,23 @@
 				cube2Texture.generateMipmaps = true;
 				cube2Texture.minFilter = THREE.LinearMipmapLinearFilter;
 
-				scene.environmentNode = mix( new Nodes.CubeTextureNode( cube2Texture ), new Nodes.CubeTextureNode( cubeTexture ), oscSine( timerLocal( .1 ) ) );
+				let vReflect = Nodes.mul( Nodes.positionLocal, Nodes.modelWorldMatrix ) 
+				vReflect = vec3( negate( vReflect.x ), vReflect.yz );
+
+				const lum = vec3(0.299, 0.587, 0.114);
+
+				//scene.environmentNode = mix( cubeTexture( cube2Texture ), cubeTexture( cube1Texture ).rrrr, oscSine( timerLocal( .1 ) ) );
+				//scene.environmentNode = mix( cubeTexture( cube2Texture ), cubeTexture( cube1Texture ), oscSine( timerLocal( .1 ) ) );
+				//scene.environmentNode = cubeTexture( cube1Texture ).rrrr;
+				scene.environmentNode = cubeTexture( cube1Texture );
+				
+				scene.environmentNode = vec3( dot( lum, scene.environmentNode ) );
+				
+				scene.backgroundNode_ = context( scene.environmentNode, {
+					/*levelNode: float( 9 ),*/
+					uvNode: vReflect
+				} );
+				//scene.backgroundNode = color( 0xFFFFFF );
 
 				const loader = new GLTFLoader().setPath( 'models/gltf/DamagedHelmet/glTF/' );
 				loader.load( 'DamagedHelmet.gltf', function ( gltf ) {
